--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/logo.png" alt="">
+        <img src="assets/img/logo.png" alt="HappyGenie">
         <span>HappyGenie</span>
       </a>
 
@@ -323,7 +323,7 @@
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
-              <img src="assets/img/logo.png" alt="">
+              <img src="assets/img/logo.png" alt="HappyGenie">
               <span>HappyGenie</span>
             </a>
             <p>A one-stop destination, encompassing all your gifting requirements.</p>
