style(app): add brand color and modify content

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">EFFORTLESS GIFTING</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">India’s first year-round premium gifting partner
-            a new and novel initiative
+          <h1 data-aos="fade-up">EFFORTLESS AND EFFICIENT GIFTING</h1>
+          <h2 data-aos="fade-up" data-aos-delay="400">India’s first year-round premium gifting partner. India’s first year-round premium gifting partner.
+            A recipient perspective approach.
           </h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/gift.png" class="img-fluid" alt="">
+          <img src="assets/img/present.png" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -99,7 +99,7 @@
               <h2>A one-stop destination, encompassing all your gifting requirements.
               </h2>
               <p>
-                An unblemished end-to-end gifting service right from providing exclusive gifting strategies to fulfillment. A comprehensive collection of premium gifting products.
+                Happy Genie is an all- inclusive journey’s end for your corporate and individual gifting requirements throughout the year. We take up the role of your personal gift manager providing you an exhilarating end to end experience by developing exclusive gifting strategies to fulfillment. Happy Genie is a new and novel initiative which provides a balance by giving your stress wings and letting it fly away.
               </p>
               <div class="text-center text-lg-start">
                 <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
@@ -111,7 +111,7 @@
           </div>
 
           <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/geolocation.png" class="img-fluid" alt="">
           </div>
 
         </div>
@@ -133,26 +133,26 @@
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="box">
-              <img src="assets/img/values-1.png" class="img-fluid" alt="">
+              <img src="assets/img/love.png" class="img-fluid" alt="">
               <h3>Empathy</h3>
-              <p>A personal touch towards gifting creates magic. No more pondering. Happy Genie’s tailor-made gifts are the perfect solution for your celebration.
+              <p>A personalized gift creates a deeper impact when approached through a recipient's perspective. We provide you with the best gift of attention.
               </p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
             <div class="box">
-              <img src="assets/img/values-2.png" class="img-fluid" alt="">
+              <img src="assets/img/magnifying.png" class="img-fluid" alt="">
               <h3>Creativity</h3>
-              <p>Creativity is a gift. Imagination has no limitation. The same thoughts can be applied to your gifts through Happy genie.- not the regular. Everyone wants to be creative.</p>
+              <p>Each and everyone of us are creative in our own ways. The major deterrent is time and energy. Happy genie helps you tide over this with ease. Our target is not be regular but be inimitable.</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="600">
             <div class="box">
-              <img src="assets/img/values-3.png" class="img-fluid" alt="">
+              <img src="assets/img/video.png" class="img-fluid" alt="">
               <h3>Excellence</h3>
-              <p>Happy genie leaves no stones unturned in providing a distinguished experience through exemplary service.
+              <p>Happy genie leaves no stones unturned in providing a distinguished experience through exemplary service. We assure to deliver your happiness and needs on time.
               </p>
             </div>
           </div>
@@ -176,17 +176,21 @@
         <div class="row feture-tabs">
 
           <div class="col-lg-6">
-            <img src="assets/img/features.png" class="img-fluid" alt="">
+            <img src="assets/img/shop.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-6">
             <h3>Corporate gifting</h3>
 
             <div class="tab-pane fade show active">
-              <p>Corporate giftings can be scintillating too. An act of appreciation goes a long way in building a stable relationship with the clients and employees</p>
-              <p>Happy genie assists in finding the perfect gifts which are unique and creative.
-                The aim is to surpass the expectation and stand out from the crowd.
-              </p>
+              <p>An employer is the one who makes his people realize their worth. Gifts work as a token of appreciation, and a personal touch towards it goes a long way in building and sustaining an emotional connection between the clients and employees. Happy Genie focuses on building a base for it’s users where they do not have to encounter a difficulty in finding a creative gift for their people. Be it an employee’s birthday or a milestone achieved, we pitch in with unique and creative gifting ideas.The aim is to stand out from the crowd leaving an indelible impression on your people.</p>
+              <ul>
+                <li>
+                  <strong>Proposed action</strong> - how and when a gift needs to be sent to make an impact.
+                </li>
+                <li><strong>Best under budget</strong> - what impresses your people. </li>
+                <li><strong>Deliver on time</strong> - A safe, secure delivery on time, everytime </li>
+              </ul>
           </div>
 
         </div> <!-- / row -->
@@ -216,7 +220,7 @@
           </div>
 
           <div class="col-lg-6">
-            <img src="assets/img/features-2.png" class="img-fluid" alt="">
+            <img src="assets/img/goods.png" class="img-fluid" alt="">
           </div>
 
         </div><!-- End Feature Tabs -->
