chhore(img): optimizee size

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
           <h1 data-aos="fade-up">EFFORTLESS AND EFFICIENT GIFTING</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">India’s first year-round premium gifting partner. India’s first year-round premium gifting partner.
+          <h2 data-aos="fade-up" data-aos-delay="400">India’s first year-round premium gifting partner.
             A recipient perspective approach.
           </h2>
           <div data-aos="fade-up" data-aos-delay="600">
@@ -204,15 +204,19 @@
               <p>Memories are the dreams that take us forward. Never miss an opportunity to celebrate your loved ones and create beautiful memories.</p>
                <p>The distance, time zone, or a hard-pressed work life should not be a hindrance when it comes to making your loved ones feel special. Happy Genie strives to bridge the gap and provide a personal and satisfying experience.
               </p>
-              <div class="d-flex align-items-center mb-2">
-<!--                <i class="bi bi-check2"></i>-->
+              <!--<div class="d-flex align-items-center mb-2">
+                <i class="bi bi-check2"></i>
                 <h4 class="ml-2">A dedicated user-friendly mobile application.
                 </h4>
-              </div>
-              <div class="d-flex align-items-center mb-2">
-<!--                <i class="bi bi-check2"></i>-->
-                <h4 class="ml-2">A complimentary physical picture album, enclosed with year-round memories. </h4>
-              </div>
+              </div>-->
+              <ul>
+                <li>
+                  A dedicated user-friendly mobile application.
+                </li>
+                <li>
+                  A complimentary physical picture album, enclosed with year-round memories.
+                </li>
+              </ul>
 
             </div><!-- End Tab 1 Content -->
 
