--- a/who-we-are.html
+++ b/who-we-are.html
@@ -43,17 +43,14 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/logo.png" alt="HappyGenie">
+        <img src="assets/img/Happy-genie-Mascot(15).png" alt="HappyGenie">
         <span>HappyGenie</span>
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#features">Services</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted " href="https://calendly.com/happygenie">Book a demo</a></li>
+          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+         
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -99,7 +96,7 @@
           purpose. Our vision is to provide an impeccable gifting journey where budget, time or distance would never be a
           hindrance. Together we strive to make a difference and create a happy environment.</p>
 
-          <p style="color: var(--brand-color);">- Sowmya, Founder at Happy Genie</p>
+          <a style="color: var(--brand-color);" href="https://www.linkedin.com/in/shanmugavadivu-t-sowmya/" target="_blank">- Sowmya, Founder at Happy Genie</a>
         </p>
       </div>
     </section>
@@ -113,15 +110,14 @@
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
-              <img src="assets/img/logo.png" alt="HappyGenie">
+              <img src="assets/img/Happy-genie-Mascot(15).png" alt="HappyGenie">
               <span>HappyGenie</span>
             </a>
             <p>A one-stop destination, encompassing all your gifting requirements.</p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.facebook.com/happygenieofficial/" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/happygenieofficial/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/happygenie" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
 
@@ -144,7 +140,7 @@
               <br /> India
               <br /> 636009 <br><br>
               <strong>Phone:</strong> +91 86674 12107<br>
-              <strong>Email:</strong> sowmya@thehappygenie.com<br>
+              <strong>Email:</strong> contact@thehappygenie.com<br>
             </p>
 
           </div>
