--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-74P4HYLXJF"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-74P4HYLXJF");
+    </script>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+
+    <!-- font awesome icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <!-- END font awesome icons -->
 
     <link
       rel="stylesheet"
@@ -78,13 +95,6 @@
             <li><a class="nav-link scrollto" href="#about">About</a></li>
             <li><a class="nav-link scrollto" href="#features">Services</a></li>
             <li><a class="nav-link scrollto" href="#enquiry">Contact</a></li>
-            <li>
-              <a
-                class="nav-link scrollto"
-                href="./assets/Happy Genie Catalogue.pdf"
-                >Catalogue</a
-              >
-            </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -348,53 +358,6 @@
       </section>
       <!-- End How it works Section -->
 
-      <!-- ======= slider ======= -->
-      <!--Basic structure of slider-->
-      <h3 class="our-work" style="margin-top: 150px">
-        We make your gifts express
-      </h3>
-
-      <!-- Slideshow container -->
-      <div class="center">
-        <div class="slideshow-container SlideContainer">
-          <div class="mySlides sfade">
-            <img src="./assets/Slider/1.jpg" style="width: 100%" />
-          </div>
-
-          <div class="mySlides sfade">
-            <img src="./assets/Slider/2.jpg" style="width: 100%" />
-          </div>
-
-          <div class="mySlides sfade">
-            <img src="./assets/Slider/3.jpg" style="width: 100%" />
-          </div>
-          <div class="mySlides sfade">
-            <img src="./assets/Slider/4.jpg" style="width: 100%" />
-          </div>
-        </div>
-      </div>
-      <br />
-
-      <!-- The dots/circles -->
-      <div style="text-align: center">
-        <span class="sdot" onclick="currentSlide(1)"></span>
-        <span class="sdot" onclick="currentSlide(2)"></span>
-        <span class="sdot" onclick="currentSlide(3)"></span>
-        <span class="sdot" onclick="currentSlide(4)"></span>
-      </div>
-
-      <!-- <div class="center">
-        <div class="SlideContainer">
-          <div class="slideWrapper">
-            <img src="./assets/Slider/1.jpg" />
-            <img src="./assets/Slider/2.jpg" />
-            <img src="./assets/Slider/3.jpg" />
-            <img src="./assets/Slider/4.jpg" />
-          </div>
-        </div>
-      </div> -->
-      <!-- End slider -->
-
       <div class="container" style="margin-top: 50px">
         <!--====== Why us ========-->
         <div class="row feature-icons" data-aos="fade-up">
@@ -490,6 +453,60 @@
         </div>
         <!-- End Why us -->
       </div>
+
+      <!-- ======= slider ======= -->
+      <!--Basic structure of slider-->
+      <h3 class="our-work" style="margin: 150px 0 50px 0">
+        We make your gifts express
+      </h3>
+
+      <!-- Slideshow container -->
+      <div class="center">
+        <div class="slideshow-container SlideContainer">
+          <div class="mySlides sfade">
+            <img src="./assets/Slider/1.jpg" />
+          </div>
+          <div class="mySlides sfade">
+            <img src="./assets/Slider/2.jpg" />
+          </div>
+          <div class="mySlides sfade">
+            <img src="./assets/Slider/3.jpg" />
+          </div>
+          <div class="mySlides sfade">
+            <img src="./assets/Slider/4.jpg" />
+          </div>
+          <div class="mySlides sfade">
+            <img src="./assets/Slider/5.jpg" />
+          </div>
+          <div class="mySlides sfade">
+            <img src="./assets/Slider/6.jpg" />
+          </div>
+        </div>
+      </div>
+      <br />
+
+      <!-- The dots/circles -->
+      <div style="text-align: center">
+        <span class="sdot" onclick="currentSlide(1)"></span>
+        <span class="sdot" onclick="currentSlide(2)"></span>
+        <span class="sdot" onclick="currentSlide(3)"></span>
+        <span class="sdot" onclick="currentSlide(4)"></span>
+        <span class="sdot" onclick="currentSlide(5)"></span>
+        <span class="sdot" onclick="currentSlide(6)"></span>
+      </div>
+
+      <!-- <div class="center">
+        <div class="SlideContainer">
+          <div class="slideWrapper">
+            <img src="./assets/Slider/1.jpg" />
+            <img src="./assets/Slider/2.jpg" />
+            <img src="./assets/Slider/3.jpg" />
+            <img src="./assets/Slider/4.jpg" />
+          </div>
+        </div>
+      </div> -->
+      <!-- End slider -->
+
       <!-- ======= F.A.Q Section ======= -->
       <section id="faq" class="faq">
         <div class="container" data-aos="fade-up">
@@ -899,7 +916,7 @@
                       name="occasion"
                       id="occasion"
                       class="form-control"
-                      style="color: #212529"
+                      style="color: #212529; font-size: 14px"
                     >
                       <option value="" style="display: none; color: #212529">
                         What is the occasion?
@@ -1010,13 +1027,15 @@
     <a
       href="https://api.whatsapp.com/send?phone=918667412107&text=Hi"
       class="float"
+      target="_blank"
     >
       <!-- <i class="my-float"></i> -->
       <i
         class="fa fa-whatsapp my-float"
         style="font-size: 36px; color: azure"
-      ></i> </a
-    ><a href="#contact" class="float2">
+      ></i>
+    </a>
+    <a href="#enquiry" class="float2">
       <!-- <i class="my-float"></i> -->
       <i
         class="fa fa-phone my-float"
