--- a/who-we-are.html
+++ b/who-we-are.html
@@ -2,8 +2,25 @@
 <html lang="en">
 
 <head>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-74P4HYLXJF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-74P4HYLXJF');
+</script>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+<!-- font awosem -->
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
+
 
   <title>HappyGenie</title>
   <meta content="" name="description">
@@ -61,11 +78,17 @@
   <main id="main">
     
     <section class="inner-page">
-      <div class="container" style="margin-top: 80px; width: 80%;">
+      <div class="container" style="margin-top: 80px; width: 80%; width: 1000px; height: auto;">
         <div class="content">
-        <h2 style="font-size: 24px;
-    font-weight: 700;
-    color: #012970;">How did the genie get out of the lamp?</h2>
+          <div class="pptCtr" >
+<img src="./assets/img/ppt/Happy Genie Corporate deck_page-0001.jpg" alt="" srcset="" width="1000px" height="auto">
+<img src="./assets/img/ppt/Happy Genie Corporate deck_page-0002.jpg" alt="" srcset="" width="1000px" height="auto">
+<img src="./assets/img/ppt/Happy Genie Corporate deck_page-0003.jpg" alt="" srcset="" width="1000px" height="auto">
+<img src="./assets/img/ppt/Happy Genie Corporate deck_page-0004.jpg" alt="" srcset="" width="1000px" height="auto">
+</div>
+
+        <h2 style="font-size: 24px ;;font-weight: 700;color: #012970; margin-top: 30px;">
+          How did the genie get out of the lamp?</h2>
         </div>
         <br />
         <p>
@@ -81,7 +104,7 @@
           network. It made me realize that I was not alone, and a lot of people wanted to pursue their artistic dreams. My team
           was formed. Thus I began my business and named it ,” Surabhi Craftsvilla”, my beautiful three month old daughter’s name. </p>
           
-          <p>>We designed the products and shared them on social media platforms. The response was good for the creative product
+          <p>We designed the products and shared them on social media platforms. The response was good for the creative product
           range. While it looked effortless on the outside, we had to put in a lot of hard work which in turn resulted in
           converting each and every enquirer into a valuable customer. This effort rewarded us. We achieved the milestone of one
           hundred customers in a short span. The work I had put in brought out my hidden sales and operation skills.</p>
@@ -159,6 +182,30 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
+
+ <!-- floating buttons -->
+ <a
+ href="https://api.whatsapp.com/send?phone=918667412107&text=Hi"
+ class="float"
+ target="_blank"
+>
+ <!-- <i class="my-float"></i> -->
+ <i
+   class="fa fa-whatsapp my-float"
+   style="font-size: 36px; color: azure"
+ ></i> </a>
+ <a href="./index.html" class="float2" >
+ <!-- <i class="my-float"></i> -->
+ <i
+   class="fa fa-phone my-float"
+   aria-hidden="true"
+   style="font-size: 36px; color: azure"
+ ></i>
+</a>
+
+
+
+
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
@@ -170,6 +217,11 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+
+
+
+
 
 </body>
 
