form Error fixed and mail id hided

--- a/index.html
+++ b/index.html
@@ -863,9 +863,9 @@
             <!-- <div class="col-lg-6"></div> -->
             <div class="col-lg-12">
               <form
-                method="post"
                 class="php-email-form"
-                action="https://formsubmit.co/sowmya@thehappygenie.com"
+                action="https://formsubmit.co/f66c130fb5704aeb1e87e86da185eed4"
+                method="POST"
               >
                 <input
                   type="hidden"
@@ -880,7 +880,7 @@
                 <input
                   type="hidden"
                   name="_url"
-                  value="hhttps://www.thehappygenie.com/"
+                  value="https://www.thehappygenie.com/"
                 />
                 <div class="row gy-4">
                   <div class="col-md-6">
